<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_nearby_choices"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:entries="@array/nearby_option"
                            android:popupBackground="#fff"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center"
                            android:textColor="#fff">

                        </Spinner>

                        <Spinner
                            android:id="@+id/radius_choices"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:entries="@array/radius_option"
                            android:popupBackground="#fff"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center"
                            android:textColor="#fff">

                        </Spinner>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageViewSearch"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:src="@drawable/ic_search"
                            android:tint="#fff" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPlaces"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ProgressBar>



        </RelativeLayout>
    </LinearLayout>








    <LinearLayout
        android:id="@+id/linearLayoutShowOnMap"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Show places on Map"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>